@@ -29,6 +29,7 @@ end
 
 local vsx, vsy   = widgetHandler:GetViewSizes()
 
+local ui_opacity = Spring.GetConfigFloat("ui_opacity",0.66)
 local bgcorner				= ":n:LuaUI/Images/bgcorner.png"
 
 local widgetScale = 1
@@ -170,11 +171,11 @@ local function createList()
 		WG['guishader_api'].InsertRect(left, bottom, right, top, 'displayinfo')
 	end
 	drawlist[1] = glCreateList( function()
-		glColor(0, 0, 0, 0.66)
+		glColor(0, 0, 0, ui_opacity)
 		RectRound(left, bottom, right, top, 5.5*widgetScale)
 		
 		local borderPadding = 2.75*widgetScale
-		glColor(1,1,1,0.025)
+		glColor(1,1,1,ui_opacity*0.04)
 		RectRound(left+borderPadding, bottom+borderPadding, right-borderPadding, top-borderPadding, 4.4*widgetScale)
 		
 	end)
@@ -195,9 +196,21 @@ function widget:Shutdown()
 	WG['displayinfo'] = nil
 end
 
+local guishaderEnabled = (WG['guishader_api'] ~= nil)
+
 local passedTime = 0
 local passedTime2 = 0
+local uiOpacitySec = 0.5
 function widget:Update(dt)
+
+	uiOpacitySec = uiOpacitySec + dt
+	if uiOpacitySec>0.5 then
+		uiOpacitySec = 0
+		if ui_opacity ~= Spring.GetConfigFloat("ui_opacity",0.66) then
+			ui_opacity = Spring.GetConfigFloat("ui_opacity",0.66)
+			createList()
+		end
+	end
 	passedTime = passedTime + dt
 	passedTime2 = passedTime2 + dt
 	if passedTime > 0.1 then
@@ -207,6 +220,10 @@ function widget:Update(dt)
 	if passedTime2 > 1 then
 		updateValues()
 		passedTime2 = passedTime2 - 1
+	end
+	if guishaderEnabled ~= (WG['guishader_api'] ~= nil) then
+		guishaderEnabled = (WG['guishader_api'] ~= nil)
+		createList()
 	end
 end
 
