@@ -53,7 +53,6 @@ local Config = {
 		sx = vsx*0.4, --background size
 		
 		fontsize = 10*widgetScale,
-		
 		minlines = 3, --minimal number of lines to display
 		maxlines = 3,
 		maxlinesScrollmode = 3,
@@ -78,6 +77,7 @@ local Config = {
 		
 		cbackground = {0,0,0,0.0},
 		cborder = {0,0,0,0},
+		noblur = true,
 		
 		dragbutton = {2,3}, --middle mouse button
 		tooltip = {
@@ -174,11 +174,13 @@ local function createconsole(r)
 		fontsize=r.fontsize,
 		caption="",
 		options="o", --black outline
+		noblur = true,
 	}
 	
 	local activationarea = {"area",
 		px=r.px-r.fadedistance,py=r.py-r.fadedistance,
 		sx=r.sx+r.fadedistance*2,sy=0,
+		noblur = true,
 		
 		mousewheel=function(up,mx,my,self)
 			if (vars.browsinghistory) then
@@ -212,6 +214,7 @@ local function createconsole(r)
 		color=r.cbackground,
 		border=r.cborder,
 		movable=r.dragbutton,
+		noblur = true,
 		
 		obeyscreenedge = true,
 		--overrideclick = {2},
