@@ -84,6 +84,7 @@ local Config = {
 		
 		cbackground = {0,0,0,0.0},
 		cborder = {0,0,0,0},
+		noblur = true,
 		
 		dragbutton = {2,3}, --middle mouse button
 		tooltip = {
@@ -179,11 +180,13 @@ local function createconsole(r)
 		fontsize=r.fontsize,
 		caption="",
 		options="o", --black outline
+		noblur = true,
 	}
 	
 	local activationarea = {"area",
 		px=r.px-r.fadedistance,py=r.py-r.fadedistance,
 		sx=r.sx+r.fadedistance*2,sy=0,
+		noblur = true,
 		
 		mousewheel=function(up,mx,my,self)
 			if (vars.browsinghistory) then
@@ -217,7 +220,8 @@ local function createconsole(r)
 		color=r.cbackground,
 		border=r.cborder,
 		movable=r.dragbutton,
-		
+
+		noblur = true,
 		obeyscreenedge = true,
 		--overrideclick = {2},
 		
